[project]
name = "deepfake-openenv"
version = "0.1.0"
description = "Deepfake detection OpenEnv"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "pandas",
    "torch",
    "transformers",
    "Pillow",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server:app"

[tool.openenv]
entrypoint = "server:app"
